# bitirmetezi

./: BitirmeTez.docx  CMakeLists.txt  NASIL_CALISTIRILIR.md  ORKO_PROJE_NOTU.md  ORKO_Slave.uvguix.victus  ORKO_Slave.uvoptx  ORKO_Slave.uvprojx  build_sim.bat  build_sim.ps1  deneme.txt  sim_native.ps1  sim_native2.ps1  tez_content.txt
algo/: fire_score.c  fire_score.h
app/: main.c  orko_config.h
cmake/: arm-none-eabi.cmake
drivers/: hal_adc.c  hal_adc.h  hal_i2c.c  hal_i2c.h  hal_timer.c  hal_timer.h  hal_uart.c  hal_uart.h
linker/: M031_sim.ld
lora/: lora_e22.c  lora_e22.h
power/: power_mgmt.c  power_mgmt.h
sensors/: drv_bmp390.c  drv_bmp390.h  drv_hdc2022.c  drv_hdc2022.h  drv_mq9.c  drv_mq9.h  drv_neo7m.c  drv_neo7m.h  drv_scd40.c  drv_scd40.h
sim/: fake_sensors.c  fake_sensors.h  sim_display.c  sim_display.h  sim_main.c  sim_uart.c
startup/: startup_M031Series.s
